# ParallelComputing_DES

./: 1.ncu-rep  CMakeLists.txt  DES.cpp  DES.h  DES_parallel.cu  DES_parallel.cuh  README.md  main.cu  password.txt  utility.h
Results/: results-20250909-092334.txt  results-20250910-110112.txt  results-20250910-162958.txt  results-20250910-163928.txt  results-20250910-165001.txt  results-20250910-165449.txt  results-20250910-171527.txt  results-20250910-175609.txt  results-20250910-175849.txt  results-20251112-153705RELEASE.txt  results-20251112-153734RELEASE.txt  results-20251112-153803RELEASE.txt  results-20251117-170015RELEASE.txt  results-20251117-170148RELEASE.txt  results-20251117-171239RELEASE.txt  results-20251118-150330RELEASE.txt  results-20251118-161222RELEASE.txt  results-20251119-111001RELEASE.txt  results-20251119-114058RELEASE.txt  results-20251119-114412RELEASE.txt
